Cover page ready. Not responsive yet

--- a/assets/css/scss/base.scss
+++ b/assets/css/scss/base.scss
@@ -1,4 +1,9 @@
 // Base
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
 
 html {
   font-size: 62.5%;
@@ -7,4 +12,5 @@ html {
 body {
   background: $background;
   font-size: 1.6em;
+  padding: 2rem;
 }
