--- a/assets/css/scss/typography.scss
+++ b/assets/css/scss/typography.scss
@@ -52,3 +52,43 @@ h3,
 h4 {
   font-family: "RoslindaleCondensed";
 }
+
+h1 {
+  font-size: clamp(3rem, calc(3rem + ((1vw - 0.48rem) * 7.5)), 9rem);
+}
+
+// Links
+
+a {
+  text-transform: uppercase;
+  font-size: 1.5rem;
+  font-weight: 700;
+  text-decoration: none;
+  font-family: $regular-font;
+  color: $primary-color;
+}
+
+a.read-more {
+  display: inline-block;
+  padding: 2rem 0;
+  position: relative;
+  width: fit-content;
+
+  &:after {
+    position: absolute;
+    content: "";
+    width: 50%;
+    margin-left: 15px;
+    background-image: url(../icons/fi_arrow-right.svg);
+    height: 4rem;
+    background-repeat: no-repeat;
+    background-size: contain;
+    top: 1rem;
+    transition: all 0.5s ease-in-out;
+  }
+  &:hover {
+    &:after {
+      transform: translate(20px, 0);
+    }
+  }
+}
