--- a/assets/css/scss/typography.scss
+++ b/assets/css/scss/typography.scss
@@ -66,6 +66,7 @@ a {
   text-decoration: none;
   font-family: $regular-font;
   color: $primary-color;
+  letter-spacing: 0.5px;
 }
 
 a.read-more {
@@ -73,6 +74,7 @@ a.read-more {
   padding: 2rem 0;
   position: relative;
   width: fit-content;
+  transition: all 0.5s ease-in-out;
 
   &:after {
     position: absolute;
@@ -87,6 +89,7 @@ a.read-more {
     transition: all 0.5s ease-in-out;
   }
   &:hover {
+    letter-spacing: 1px;
     &:after {
       transform: translate(20px, 0);
     }
