--- a/assets/css/scss/container.scss
+++ b/assets/css/scss/container.scss
@@ -1,16 +1,15 @@
 .home-main {
   position: relative;
-  min-height: 80vh;
   display: flex;
   align-content: center;
+
   h1 {
     font-size: clamp(3rem, calc(3rem + ((1vw - 0.48rem) * 7.5)), 8.5rem);
     z-index: 1;
     display: flex;
     align-self: center;
-    margin: 0;
+    margin: 30rem 0 0 0;
     width: 100%;
-    margin-top: 4rem;
   }
 
   .cover {
@@ -33,8 +32,47 @@
     display: flex;
     flex-direction: column;
     align-self: center;
+    margin-bottom: 10rem;
     p {
       max-width: 48rem;
+    }
+  }
+}
+
+.portfolio {
+  h2 {
+    margin-bottom: 5rem;
+    &::before {
+      display: inline-block;
+      content: "";
+      border-top: 1px solid $primary-color;
+      width: 2.5rem;
+      margin: 0 1rem;
+      transform: translateY(-0.8rem);
+    }
+  }
+}
+
+.projects {
+  text-align: center;
+  list-style: none;
+
+  a {
+    font-family: $display-font;
+    color: $primary-color;
+    text-transform: uppercase;
+    font-size: clamp(4rem, calc(4rem + ((1vw - 0.048rem) * 90)), 11.2rem);
+    color: $primary-color;
+    letter-spacing: 1px;
+    transition: all 0.9s ease-in-out;
+    &:hover {
+      color: $primary-color;
+      background-image: url(../img/gradient.jpg);
+      background-clip: text;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent; /* Will override color (regardless of order) */
+      -webkit-text-stroke-width: 0.1px;
+      -webkit-text-stroke-color: $background;
     }
   }
 }
