--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -461,7 +461,6 @@ header .logo {
 
 .home-main {
   position: relative;
-  min-height: 80vh;
   display: flex;
   align-content: center;
 }
@@ -470,9 +469,8 @@ header .logo {
   z-index: 1;
   display: flex;
   align-self: center;
-  margin: 0;
+  margin: 30rem 0 0 0;
   width: 100%;
-  margin-top: 4rem;
 }
 .home-main .cover {
   aspect-ratio: 2/2.5;
@@ -493,9 +491,46 @@ header .logo {
   display: flex;
   flex-direction: column;
   align-self: center;
+  margin-bottom: 10rem;
 }
 .home-main .info p {
   max-width: 48rem;
+}
+
+.portfolio h2 {
+  margin-bottom: 5rem;
+}
+.portfolio h2::before {
+  display: inline-block;
+  content: "";
+  border-top: 1px solid #1a1a1a;
+  width: 2.5rem;
+  margin: 0 1rem;
+  transform: translateY(-0.8rem);
+}
+
+.projects {
+  text-align: center;
+  list-style: none;
+}
+.projects a {
+  font-family: "RoslindaleCondensed";
+  color: #1a1a1a;
+  text-transform: uppercase;
+  font-size: clamp(4rem, 4rem + (1vw - 0.048rem) * 90, 11.2rem);
+  color: #1a1a1a;
+  letter-spacing: 1px;
+  transition: all 0.9s ease-in-out;
+}
+.projects a:hover {
+  color: #1a1a1a;
+  background-image: url(../img/gradient.jpg);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  /* Will override color (regardless of order) */
+  -webkit-text-stroke-width: 0.1px;
+  -webkit-text-stroke-color: #fff5e8;
 }
 
 .main {
