--- a/assets/css/scss/header.scss
+++ b/assets/css/scss/header.scss
@@ -8,6 +8,7 @@ header {
     font-size: 2rem;
     color: $primary-color;
     font-family: $display-font;
+    text-transform: uppercase;
   }
 }
 
