--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -384,11 +384,54 @@ h1 {
   font-size: clamp(3rem, 3rem + (1vw - 0.48rem) * 7.5, 9rem);
 }
 
-a {
+h2 {
+  font-size: clamp(2rem, 2rem + (1vw - 0.48rem) * 6.25, 7rem);
+}
+
+p {
+  line-height: 1.3;
+}
+
+p.small {
+  font-size: 1.4rem;
+}
+
+p.available:before {
+  content: "\a";
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background: #0aaf4f;
+  display: inline-block;
+  margin-right: 10px;
+}
+
+p.not-available:before {
+  content: "\a";
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background: #af0909;
+  display: inline-block;
+  margin-right: 10px;
+}
+
+.cta-text {
+  font-size: 2.5rem;
+  font-weight: 700;
+}
+
+.main-nav a {
   text-transform: uppercase;
   font-size: 1.5rem;
   font-weight: 700;
   text-decoration: none;
+  font-family: "NeueMontreal";
+  color: #1a1a1a;
+  letter-spacing: 0.5px;
+}
+
+a {
   font-family: "NeueMontreal";
   color: #1a1a1a;
   letter-spacing: 0.5px;
@@ -447,6 +490,7 @@ header .logo {
   font-size: 2rem;
   color: #1a1a1a;
   font-family: "RoslindaleCondensed";
+  text-transform: uppercase;
 }
 
 .main-nav ul li {
@@ -494,6 +538,22 @@ header .logo {
   margin-bottom: 10rem;
 }
 .home-main .info p {
+  max-width: 48rem;
+}
+
+.about-main {
+  position: relative;
+  display: flex;
+  align-content: center;
+}
+.about-main .info {
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  margin-bottom: 10rem;
+}
+.about-main .info p {
   max-width: 48rem;
 }
 
