--- a/assets/css/scss/container.scss
+++ b/assets/css/scss/container.scss
@@ -57,7 +57,9 @@
 }
 
 .portfolio {
-  h2 {
+  h3 {
+    font-size: 2.6rem;
+    letter-spacing: 2px;
     margin-bottom: 5rem;
     &::before {
       display: inline-block;
@@ -82,6 +84,7 @@
     color: $primary-color;
     letter-spacing: 1px;
     transition: all 0.9s ease-in-out;
+    text-decoration: none;
     &:hover {
       color: $primary-color;
       background-image: url(../img/gradient.jpg);
