Added the story

--- a/assets/css/scss/container.scss
+++ b/assets/css/scss/container.scss
@@ -98,6 +98,8 @@
 }
 
 .portfolio {
+  display: flex;
+  flex-direction: column;
   section.title-image {
     text-align: center;
     padding: 4rem 0;
@@ -107,6 +109,30 @@
   }
   section.intro {
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-self: center;
+    p {
+      max-width: 48rem;
+    }
+    .role-team {
+      display: flex;
+      flex-direction: row;
+      background-color: #a8b7a7;
+      padding: 2rem;
+      margin: 4rem 0;
+      max-width: 48rem;
+      div {
+        padding: 2rem;
+        ul {
+          list-style: none;
+          padding: 0;
+          li {
+            padding: 0;
+            margin-bottom: 10px;
+          }
+        }
+      }
+    }
   }
 }
