--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -388,6 +388,11 @@ h2 {
   font-size: clamp(2rem, 2rem + (1vw - 0.48rem) * 6.25, 7rem);
 }
 
+h4 {
+  font-size: 3rem;
+  margin: 0;
+}
+
 p {
   line-height: 1.3;
   max-width: 48rem;
@@ -601,6 +606,10 @@ header .logo {
   -webkit-text-stroke-color: #fff5e8;
 }
 
+.portfolio {
+  display: flex;
+  flex-direction: column;
+}
 .portfolio section.title-image {
   text-align: center;
   padding: 4rem 0;
@@ -610,7 +619,31 @@ header .logo {
 }
 .portfolio section.intro {
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-self: center;
+}
+.portfolio section.intro p {
+  max-width: 48rem;
+}
+.portfolio section.intro .role-team {
+  display: flex;
+  flex-direction: row;
+  background-color: #a8b7a7;
+  padding: 2rem;
+  margin: 4rem 0;
+  max-width: 48rem;
+}
+.portfolio section.intro .role-team div {
+  padding: 2rem;
+}
+.portfolio section.intro .role-team div ul {
+  list-style: none;
+  padding: 0;
+}
+.portfolio section.intro .role-team div ul li {
+  padding: 0;
+  margin-bottom: 10px;
 }
 
 .main {
