--- a/assets/css/scss/typography.scss
+++ b/assets/css/scss/typography.scss
@@ -61,6 +61,11 @@ h2 {
   font-size: clamp(2rem, calc(2rem + ((1vw - 0.48rem) * 6.25)), 7rem);
 }
 
+h4 {
+  font-size: 3rem;
+  margin: 0;
+}
+
 p {
   line-height: 1.3;
   max-width: 48rem;
