--- a/assets/css/scss/typography.scss
+++ b/assets/css/scss/typography.scss
@@ -61,9 +61,14 @@ h2 {
   font-size: clamp(2rem, calc(2rem + ((1vw - 0.48rem) * 6.25)), 7rem);
 }
 
+h3 {
+  letter-spacing: 1px;
+}
+
 h4 {
   font-size: 3rem;
   margin: 0;
+  letter-spacing: 1px;
 }
 
 p {
