--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -187,9 +187,9 @@ select {
  * Correct the inability to style clickable types in iOS and Safari.
  */
 button,
-[type=button],
-[type=reset],
-[type=submit] {
+[type="button"],
+[type="reset"],
+[type="submit"] {
   -webkit-appearance: button;
 }
 
@@ -197,9 +197,9 @@ button,
  * Remove the inner border and padding in Firefox.
  */
 button::-moz-focus-inner,
-[type=button]::-moz-focus-inner,
-[type=reset]::-moz-focus-inner,
-[type=submit]::-moz-focus-inner {
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
   border-style: none;
   padding: 0;
 }
@@ -208,9 +208,9 @@ button::-moz-focus-inner,
  * Restore the focus styles unset by the previous rule.
  */
 button:-moz-focusring,
-[type=button]:-moz-focusring,
-[type=reset]:-moz-focusring,
-[type=submit]:-moz-focusring {
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
   outline: 1px dotted ButtonText;
 }
 
@@ -260,8 +260,8 @@ textarea {
  * 1. Add the correct box sizing in IE 10.
  * 2. Remove the padding in IE 10.
  */
-[type=checkbox],
-[type=radio] {
+[type="checkbox"],
+[type="radio"] {
   box-sizing: border-box;
   /* 1 */
   padding: 0;
@@ -271,8 +271,8 @@ textarea {
 /**
  * Correct the cursor style of increment and decrement buttons in Chrome.
  */
-[type=number]::-webkit-inner-spin-button,
-[type=number]::-webkit-outer-spin-button {
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
   height: auto;
 }
 
@@ -280,7 +280,7 @@ textarea {
  * 1. Correct the odd appearance in Chrome and Safari.
  * 2. Correct the outline style in Safari.
  */
-[type=search] {
+[type="search"] {
   -webkit-appearance: textfield;
   /* 1 */
   outline-offset: -2px;
@@ -290,7 +290,7 @@ textarea {
 /**
  * Remove the inner padding in Chrome and Safari on macOS.
  */
-[type=search]::-webkit-search-decoration {
+[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
@@ -340,7 +340,10 @@ template {
 @font-face {
   src: url("../fonts/RoslindaleCondensed-Regular.eot");
   /* IE < 9 */
-  src: url("../fonts/RoslindaleCondensed-Regular.eot?#") format("embedded-opentype"), url("../fonts/RoslindaleCondensed-Regular.woff2") format("woff2"), url("../fonts/RoslindaleCondensed-Regular.woff") format("woff");
+  src: url("../fonts/RoslindaleCondensed-Regular.eot?#")
+      format("embedded-opentype"),
+    url("../fonts/RoslindaleCondensed-Regular.woff2") format("woff2"),
+    url("../fonts/RoslindaleCondensed-Regular.woff") format("woff");
   font-family: "RoslindaleCondensed";
   font-style: normal;
   font-weight: normal;
@@ -348,7 +351,9 @@ template {
 @font-face {
   src: url("../fonts/NeueMontreal-Bold.eot");
   /* IE < 9 */
-  src: url("../fonts/NeueMontreal-Bold.eot?#") format("embedded-opentype"), url("../fonts/NeueMontreal-Bold.woff2") format("woff2"), url("../fonts/NeueMontreal-B  old.woff") format("woff");
+  src: url("../fonts/NeueMontreal-Bold.eot?#") format("embedded-opentype"),
+    url("../fonts/NeueMontreal-Bold.woff2") format("woff2"),
+    url("../fonts/NeueMontreal-B  old.woff") format("woff");
   font-family: "NeueMontreal";
   font-style: normal;
   font-weight: Bold;
@@ -356,7 +361,9 @@ template {
 @font-face {
   src: url("../fonts/NeueMontreal-Italic.eot");
   /* IE < 9 */
-  src: url("../fonts/NeueMontreal-Italic.eot?#") format("embedded-opentype"), url("../fonts/NeueMontreal-Italic.woff2") format("woff2"), url("../fonts/RoslindaleCondensed-Italic.woff") format("woff");
+  src: url("../fonts/NeueMontreal-Italic.eot?#") format("embedded-opentype"),
+    url("../fonts/NeueMontreal-Italic.woff2") format("woff2"),
+    url("../fonts/RoslindaleCondensed-Italic.woff") format("woff");
   font-family: "NeueMontreal";
   font-style: italic;
   font-weight: normal;
@@ -364,7 +371,9 @@ template {
 @font-face {
   src: url("../fonts/NeueMontreal-Regular.eot");
   /* IE < 9 */
-  src: url("../fonts/NeueMontreal-Regular.eot?#") format("embedded-opentype"), url("../fonts/NeueMontreal-Regular.woff2") format("woff2"), url("../fonts/NeueMontreal-Regular.woff") format("woff");
+  src: url("../fonts/NeueMontreal-Regular.eot?#") format("embedded-opentype"),
+    url("../fonts/NeueMontreal-Regular.woff2") format("woff2"),
+    url("../fonts/NeueMontreal-Regular.woff") format("woff");
   font-family: "NeueMontreal";
   font-style: normal;
   font-weight: normal;
@@ -533,14 +542,21 @@ header .logo {
   text-decoration: underline;
 }
 
+.socials {
+  margin-right: 10px;
+}
 .socials ul {
   padding: 0;
   list-style: none;
 }
 .socials ul li {
   margin-bottom: 1rem;
+  display: inline-block;
+  margin: 1rem 2rem 0 0;
 }
-
+.socials ul img {
+  height: 16px;
+}
 .home-main {
   position: relative;
   display: flex;
@@ -620,18 +636,13 @@ header .logo {
   font-size: clamp(4rem, 4rem + (1vw - 0.048rem) * 90, 11.2rem);
   color: #1a1a1a;
   letter-spacing: 1px;
-  transition: all 0.9s ease-in-out;
+  transition: all 0.5s ease-in-out;
   text-decoration: none;
 }
 .projects a:hover {
   color: #1a1a1a;
   background-image: url(../img/gradient.jpg);
   background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  /* Will override color (regardless of order) */
-  -webkit-text-stroke-width: 0.1px;
-  -webkit-text-stroke-color: #fff5e8;
 }
 
 .portfolio {
