--- a/assets/css/scss/container.scss
+++ b/assets/css/scss/container.scss
@@ -1,3 +1,7 @@
+.container {
+  margin-top: 5rem;
+}
+
 .home-main {
   position: relative;
   display: flex;
@@ -43,6 +47,8 @@
   position: relative;
   display: flex;
   align-content: center;
+  flex-direction: row;
+  justify-content: space-between;
 
   .info {
     z-index: 1;
@@ -53,6 +59,18 @@
     p {
       max-width: 48rem;
     }
+  }
+}
+
+.certs {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+
+  img {
+    width: 150px;
+    margin: 2rem;
   }
 }
 
