--- a/assets/css/scss/footer.scss
+++ b/assets/css/scss/footer.scss
@@ -21,10 +21,13 @@
     li {
       margin-bottom: 1rem;
       display: inline-block;
-      margin: 1rem 2rem 0 0;
+      margin: 0 2rem 0 0;
+      &:last-of-type {
+        margin: 0;
+      }
     }
     img {
-      height: 16px;
+      height: 20px;
       &:hover {
       }
     }
