Added Floks to portfolio

--- a/assets/css/scss/container.scss
+++ b/assets/css/scss/container.scss
@@ -150,9 +150,17 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-self: center;
-    p {
+    p,
+    ul,
+    h2 {
+      width: 100%;
       max-width: 48rem;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    img {
+      width: 100%;
+      margin: 2rem 0;
     }
   }
 }
