--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -697,10 +697,18 @@ header .logo {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-self: center;
 }
-.portfolio section.intro p {
+.portfolio section.intro p,
+.portfolio section.intro ul,
+.portfolio section.intro h2 {
+  width: 100%;
   max-width: 48rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+.portfolio section.intro img {
+  width: 100%;
+  margin: 2rem 0;
 }
 
 .main {
