--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -712,13 +712,13 @@ header .logo {
 }
 
 .main {
-  margin: 5rem auto 0 0;
+  margin: 4rem auto 0 auto;
   width: 100%;
   max-width: 128rem;
 }
 
 .container {
-  margin: 0;
+  margin: 0 auto;
   width: 100%;
   max-width: 128rem;
 }
