--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -13,13 +13,13 @@
 
 // Elements
 .main {
-  margin: 5rem auto 0 0;
+  margin: 4rem auto 0 auto;
   width: 100%;
   max-width: 128rem;
 }
 
 .container {
-  margin: 0;
+  margin: 0 auto;
   width: 100%;
   max-width: 128rem;
 }
