--- a/assets/css/scss/base.scss
+++ b/assets/css/scss/base.scss
@@ -7,12 +7,12 @@
 }
 
 html {
-  font-size: 62.5%;
+  font-size: 14px;
   scroll-behavior: smooth;
 }
 
 body {
   background: $background;
-  font-size: 1.6em;
+
   padding: 2rem;
 }
