--- a/assets/css/scss/typography.scss
+++ b/assets/css/scss/typography.scss
@@ -63,6 +63,7 @@ h2 {
 
 h3 {
   letter-spacing: 1px;
+  font-size: 1.6rem;
 }
 
 h4 {
@@ -74,6 +75,7 @@ h4 {
 p {
   line-height: 1.3;
   max-width: 48rem;
+  font-size: 1.2rem;
 }
 
 p.small {
