--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -390,6 +390,7 @@ h2 {
 
 h3 {
   letter-spacing: 1px;
+  font-size: 1.6rem;
 }
 
 h4 {
@@ -401,6 +402,7 @@ h4 {
 p {
   line-height: 1.3;
   max-width: 48rem;
+  font-size: 1.2rem;
 }
 
 p.small {
@@ -484,13 +486,12 @@ a.read-more:hover:after {
 }
 
 html {
-  font-size: 62.5%;
+  font-size: 14px;
   scroll-behavior: smooth;
 }
 
 body {
   background: #fff5e8;
-  font-size: 1.6em;
   padding: 2rem;
 }
 
@@ -508,20 +509,30 @@ header .logo {
   text-transform: uppercase;
 }
 
+.main-nav ul {
+  padding: 0;
+}
 .main-nav ul li {
   list-style: none;
   display: inline-block;
   margin: 0 1rem;
+  font-size: 1rem;
 }
 .main-nav ul li a {
   text-decoration: none;
   color: #1a1a1a;
+  font-size: 1rem;
 }
 
+@media screen and (max-width: 575px) {
+  header {
+    flex-direction: column;
+  }
+}
 .footer {
   display: flex;
   justify-content: space-between;
-  margin: 16rem 0 0 0;
+  margin: 10rem 0 0 0;
 }
 .footer h3 {
   font-size: 3rem;
@@ -550,6 +561,15 @@ header .logo {
 }
 .socials ul img {
   height: 20px;
+}
+@media screen and (max-width: 575px) {
+  .footer {
+    flex-direction: column;
+  }
+
+  .socials ul li {
+    margin: 1rem;
+  }
 }
 .container {
   margin-top: 5rem;
@@ -587,7 +607,7 @@ header .logo {
   display: flex;
   flex-direction: column;
   align-self: center;
-  margin-bottom: 10rem;
+  margin-bottom: 5rem;
 }
 .home-main .info p {
   max-width: 48rem;
@@ -639,26 +659,21 @@ header .logo {
 .projects {
   text-align: center;
   list-style: none;
+  padding-left: 0;
 }
 .projects a {
   font-family: "RoslindaleCondensed";
   color: #1a1a1a;
   text-transform: uppercase;
-  font-size: clamp(4rem, 4rem + (1vw - 0.048rem) * 90, 11.2rem);
+  font-size: clamp(4rem, 4rem + (1vw - 0.48rem) * 10, 11.2rem);
   color: #1a1a1a;
   letter-spacing: 1px;
-  transition: all 0.9s ease-in-out;
+  transition: all 0.7s ease-in-out;
   text-decoration: none;
 }
 .projects a:hover {
-  color: #1a1a1a;
-  background-image: url(../img/gradient.jpg);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  /* Will override color (regardless of order) */
-  -webkit-text-stroke-width: 0.1px;
-  -webkit-text-stroke-color: #fff5e8;
+  color: #fa835d;
+  color: linear-gradient(52deg, #fa835d 0%, #e88620 22%, #e08706 45%, #bf8740 74%, #708d93 100%);
 }
 
 .portfolio {
