--- a/assets/css/scss/typography.scss
+++ b/assets/css/scss/typography.scss
@@ -1,159 +1,170 @@
 @font-face {
-  src: url("../fonts/RoslindaleCondensed-Regular.eot"); /* IE < 9 */
-  src: url("../fonts/RoslindaleCondensed-Regular.eot?#")
-      format("embedded-opentype"),
-    /* IE 9 */ url("../fonts/RoslindaleCondensed-Regular.woff2") format("woff2"),
-    url("../fonts/RoslindaleCondensed-Regular.woff") format("woff");
-  font-family: "RoslindaleCondensed";
-  font-style: normal;
-  font-weight: normal;
+	src: url("../fonts/RoslindaleCondensed-Regular.eot"); /* IE < 9 */
+	src: url("../fonts/RoslindaleCondensed-Regular.eot?#")
+			format("embedded-opentype"),
+		/* IE 9 */ url("../fonts/RoslindaleCondensed-Regular.woff2") format("woff2"),
+		url("../fonts/RoslindaleCondensed-Regular.woff") format("woff");
+	font-family: "RoslindaleCondensed";
+	font-style: normal;
+	font-weight: normal;
 }
 
 @font-face {
-  src: url("../fonts/NeueMontreal-Bold.eot"); /* IE < 9 */
-  src: url("../fonts/NeueMontreal-Bold.eot?#") format("embedded-opentype"),
-    /* IE 9 */ url("../fonts/NeueMontreal-Bold.woff2") format("woff2"),
-    url("../fonts/NeueMontreal-B  old.woff") format("woff");
-  font-family: "NeueMontreal";
-  font-style: normal;
-  font-weight: Bold;
+	src: url("../fonts/NeueMontreal-Bold.eot"); /* IE < 9 */
+	src: url("../fonts/NeueMontreal-Bold.eot?#") format("embedded-opentype"),
+		/* IE 9 */ url("../fonts/NeueMontreal-Bold.woff2") format("woff2"),
+		url("../fonts/NeueMontreal-B  old.woff") format("woff");
+	font-family: "NeueMontreal";
+	font-style: normal;
+	font-weight: Bold;
 }
 
 @font-face {
-  src: url("../fonts/NeueMontreal-Italic.eot"); /* IE < 9 */
-  src: url("../fonts/NeueMontreal-Italic.eot?#") format("embedded-opentype"),
-    /* IE 9 */ url("../fonts/NeueMontreal-Italic.woff2") format("woff2"),
-    url("../fonts/RoslindaleCondensed-Italic.woff") format("woff");
-  font-family: "NeueMontreal";
-  font-style: italic;
-  font-weight: normal;
+	src: url("../fonts/NeueMontreal-Italic.eot"); /* IE < 9 */
+	src: url("../fonts/NeueMontreal-Italic.eot?#") format("embedded-opentype"),
+		/* IE 9 */ url("../fonts/NeueMontreal-Italic.woff2") format("woff2"),
+		url("../fonts/RoslindaleCondensed-Italic.woff") format("woff");
+	font-family: "NeueMontreal";
+	font-style: italic;
+	font-weight: normal;
 }
 
 @font-face {
-  src: url("../fonts/NeueMontreal-Regular.eot"); /* IE < 9 */
-  src: url("../fonts/NeueMontreal-Regular.eot?#") format("embedded-opentype"),
-    /* IE 9 */ url("../fonts/NeueMontreal-Regular.woff2") format("woff2"),
-    url("../fonts/NeueMontreal-Regular.woff") format("woff");
-  font-family: "NeueMontreal";
-  font-style: normal;
-  font-weight: normal;
+	src: url("../fonts/NeueMontreal-Regular.eot"); /* IE < 9 */
+	src: url("../fonts/NeueMontreal-Regular.eot?#") format("embedded-opentype"),
+		/* IE 9 */ url("../fonts/NeueMontreal-Regular.woff2") format("woff2"),
+		url("../fonts/NeueMontreal-Regular.woff") format("woff");
+	font-family: "NeueMontreal";
+	font-style: normal;
+	font-weight: normal;
 }
 
 $display-font: "RoslindaleCondensed";
 $regular-font: "NeueMontreal";
 
 html {
-  font-family: $regular-font;
+	font-family: $regular-font;
 }
 
 h1,
 h2,
 h3,
 h4 {
-  font-family: "RoslindaleCondensed";
+	font-family: "RoslindaleCondensed";
 }
 
 h1 {
-  font-size: clamp(3rem, calc(3rem + ((1vw - 0.48rem) * 7.5)), 9rem);
+	font-size: clamp(3rem, calc(3rem + ((1vw - 0.48rem) * 7.5)), 9rem);
 }
 
 h2 {
-  font-size: clamp(2rem, calc(2rem + ((1vw - 0.48rem) * 6.25)), 7rem);
+	font-size: clamp(2rem, calc(2rem + ((1vw - 0.48rem) * 6.25)), 7rem);
 }
 
 h3 {
-  letter-spacing: 1px;
-  font-size: 1.6rem;
+	letter-spacing: 1px;
+	font-size: 1.6rem;
 }
 
 h4 {
-  font-size: 3rem;
-  margin: 0;
-  letter-spacing: 1px;
+	font-size: 3rem;
+	margin: 0;
+	letter-spacing: 1px;
+}
+
+h5 {
+	font-size: 1.5rem;
+	line-height: 1;
+	letter-spacing: 1px;
 }
 
 p {
-  line-height: 1.3;
-  max-width: 48rem;
-  font-size: 1.2rem;
+	line-height: 1.3;
+	max-width: 48rem;
+	font-size: 1.2rem;
 }
 
 p.small {
-  font-size: 1.4rem;
+	font-size: 1.4rem;
 }
 
-p.available {
-  &:before {
-    content: "\A";
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    background: #0aaf4f;
-    display: inline-block;
-    margin-right: 10px;
-  }
+.available {
+	&:before {
+		content: "\A";
+		width: 10px;
+		height: 10px;
+		border-radius: 50%;
+		background: #0aaf4f;
+		display: inline-block;
+		margin-right: 10px;
+	}
 }
 
 p.not-available {
-  &:before {
-    content: "\A";
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    background: #af0909;
-    display: inline-block;
-    margin-right: 10px;
-  }
+	&:before {
+		content: "\A";
+		width: 10px;
+		height: 10px;
+		border-radius: 50%;
+		background: #af0909;
+		display: inline-block;
+		margin-right: 10px;
+	}
 }
 
 .cta-text {
-  font-size: 2.5rem;
-  font-weight: 700;
+	font-size: 2.5rem;
+	font-weight: 700;
 }
 
 // Links
 .main-nav a {
-  text-transform: uppercase;
-  font-size: 1.5rem;
-  font-weight: 700;
-  text-decoration: none;
-  font-family: $regular-font;
-  color: $primary-color;
-  letter-spacing: 0.5px;
+	text-transform: uppercase;
+	font-size: 1.5rem;
+	font-weight: 700;
+	text-decoration: none;
+	font-family: $regular-font;
+	color: $primary-color;
+	letter-spacing: 0.5px;
 }
 
 a {
-  font-family: $regular-font;
-  color: $primary-color;
-  letter-spacing: 0.5px;
+	font-family: $regular-font;
+	color: $primary-color;
+	letter-spacing: 0.5px;
 }
 
 a.read-more {
-  display: inline-block;
-  padding: 2rem 0;
-  position: relative;
-  width: fit-content;
-  transition: all 0.5s ease-in-out;
-  text-decoration: none;
-  font-weight: 700;
-  text-transform: uppercase;
+	display: inline-block;
+	padding: 2rem 0;
+	position: relative;
+	width: fit-content;
+	transition: all 0.5s ease-in-out;
+	text-decoration: none;
+	font-weight: 700;
+	text-transform: uppercase;
 
-  &:after {
-    position: absolute;
-    content: "";
-    width: 50%;
-    margin-left: 15px;
-    background-image: url(../icons/fi_arrow-right.svg);
-    height: 4rem;
-    background-repeat: no-repeat;
-    background-size: contain;
-    top: 1rem;
-    transition: all 0.5s ease-in-out;
-  }
-  &:hover {
-    letter-spacing: 1px;
-    &:after {
-      transform: translate(20px, 0);
-    }
-  }
+	&:after {
+		position: absolute;
+		content: "";
+		width: 50%;
+		margin-left: 15px;
+		background-image: url(../icons/fi_arrow-right.svg);
+		height: 4rem;
+		background-repeat: no-repeat;
+		background-size: contain;
+		top: 1rem;
+		transition: all 0.5s ease-in-out;
+	}
+	&:hover {
+		letter-spacing: 1px;
+		&:after {
+			transform: translate(20px, 0);
+		}
+	}
+}
+
+hr {
+	border-top: 1px solid rgba(0, 0, 0, 0.666);
+	margin: 2rem 0 2rem 0;
 }
