--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,15 @@
+.main {
+  margin: 4rem auto 0 auto;
+  width: 100%;
+  max-width: 128rem;
+}
+
+.container {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 128rem;
+}
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -399,6 +411,12 @@ h4 {
   letter-spacing: 1px;
 }
 
+h5 {
+  font-size: 1.5rem;
+  line-height: 1;
+  letter-spacing: 1px;
+}
+
 p {
   line-height: 1.3;
   max-width: 48rem;
@@ -409,7 +427,7 @@ p.small {
   font-size: 1.4rem;
 }
 
-p.available:before {
+.available:before {
   content: "\a";
   width: 10px;
   height: 10px;
@@ -477,6 +495,11 @@ a.read-more:hover {
 }
 a.read-more:hover:after {
   transform: translate(20px, 0);
+}
+
+hr {
+  border-top: 1px solid rgba(0, 0, 0, 0.666);
+  margin: 2rem 0 2rem 0;
 }
 
 *,
@@ -571,8 +594,16 @@ header .logo {
     margin: 1rem;
   }
 }
+.main {
+  margin: 4rem auto 0 auto;
+  width: 100%;
+  max-width: 128rem;
+}
+
 .container {
-  margin-top: 5rem;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 128rem;
 }
 
 .home-main {
@@ -585,7 +616,7 @@ header .logo {
   z-index: 1;
   display: flex;
   align-self: center;
-  margin: 30rem 0 0 0;
+  margin: 24rem 0 0 0;
   width: 100%;
 }
 .home-main .cover {
@@ -618,19 +649,37 @@ header .logo {
   display: flex;
   align-content: center;
   flex-direction: row;
-  justify-content: space-between;
+  align-items: flex-start;
+  margin-bottom: 10rem;
+  gap: 0;
 }
 .about-main .info {
   z-index: 1;
   display: flex;
   flex-direction: column;
-  align-self: center;
-  margin-bottom: 10rem;
+  width: 60%;
 }
 .about-main .info p {
   max-width: 48rem;
 }
+.about-main .sidebar {
+  width: 40%;
+  padding-top: 14rem;
+  font-size: 1rem;
+}
 
+@media screen and (max-width: 849px) {
+  .about-main {
+    flex-direction: column;
+  }
+  .about-main .info {
+    width: 100%;
+  }
+  .about-main .sidebar {
+    width: 100%;
+    padding-top: 5rem;
+  }
+}
 .certs {
   width: 100%;
   display: flex;
@@ -724,16 +773,4 @@ header .logo {
 .portfolio section.intro img {
   width: 100%;
   margin: 2rem 0;
-}
-
-.main {
-  margin: 4rem auto 0 auto;
-  width: 100%;
-  max-width: 128rem;
-}
-
-.container {
-  margin: 0 auto;
-  width: 100%;
-  max-width: 128rem;
 }
